parser/src/parser/snapshots/test__parser::classes::test::parse_class_fields.snap
---
created: "2020-02-03T17:09:38.226270Z"
creator: insta@0.8.2
source: parser/src/parser/classes.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 44)
  CLASS_DEF@[0; 44)
    CLASS_KW@[0; 5) "class"
    NAME@[5; 12)
      WHITESPACE@[5; 6) " "
      IDENT@[6; 12) "Person"
    WHITESPACE@[12; 13) " "
    L_CURLY@[13; 14) "{"
    WHITESPACE@[14; 15) " "
    NAMED_FIELD_DEF@[15; 27)
      NAME@[15; 19)
        IDENT@[15; 19) "name"
      COLON@[19; 20) ":"
      IDENT_TYPE@[20; 26)
        IDENT@[20; 26) "String"
      SEMI@[26; 27) ";"
    WHITESPACE@[27; 28) " "
    NAMED_FIELD_DEF@[28; 43)
      NAME@[28; 35)
        IDENT@[28; 35) "surname"
      COLON@[35; 36) ":"
      IDENT_TYPE@[36; 42)
        IDENT@[36; 42) "String"
      SEMI@[42; 43) ";"
    R_CURLY@[43; 44) "}"

