parser/src/parser/snapshots/test__parser::classes::test::parse_class_fields_methods.snap
---
created: "2020-03-03T19:30:54.343258Z"
creator: insta@0.8.2
source: parser/src/parser/classes.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 62)
  CLASS_DEF@[0; 62)
    CLASS_KW@[0; 5) "class"
    WHITESPACE@[5; 6) " "
    NAME@[6; 13)
      IDENT@[6; 12) "Person"
      WHITESPACE@[12; 13) " "
    L_CURLY@[13; 14) "{"
    WHITESPACE@[14; 15) " "
    NAMED_FIELD_DEF@[15; 28)
      NAME@[15; 19)
        IDENT@[15; 19) "name"
      COLON@[19; 20) ":"
      IDENT_TYPE@[20; 26)
        IDENT@[20; 26) "String"
      SEMI@[26; 27) ";"
      WHITESPACE@[27; 28) " "
    NAMED_FIELD_DEF@[28; 44)
      NAME@[28; 35)
        IDENT@[28; 35) "surname"
      COLON@[35; 36) ":"
      IDENT_TYPE@[36; 42)
        IDENT@[36; 42) "String"
      SEMI@[42; 43) ";"
      WHITESPACE@[43; 44) " "
    FN_DEF@[44; 61)
      FN_KW@[44; 46) "fn"
      WHITESPACE@[46; 47) " "
      NAME@[47; 52)
        IDENT@[47; 52) "hello"
      PARAM_LIST@[52; 59)
        L_PAREN@[52; 53) "("
        PARAM@[53; 57)
          SELF_KW@[53; 57) "self"
        R_PAREN@[57; 58) ")"
        WHITESPACE@[58; 59) " "
      BLOCK_EXPR@[59; 61)
        BLOCK@[59; 61)
          L_CURLY@[59; 60) "{"
          R_CURLY@[60; 61) "}"
    R_CURLY@[61; 62) "}"

