parser/src/parser/snapshots/test__parser::classes::test::parse_empty_class.snap
---
created: "2020-02-03T16:29:14.697644Z"
creator: insta@0.8.2
source: parser/src/parser/classes.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 12)
  CLASS_DEF@[0; 12)
    CLASS_KW@[0; 5) "class"
    NAME@[5; 9)
      WHITESPACE@[5; 6) " "
      IDENT@[6; 9) "Foo"
    WHITESPACE@[9; 10) " "
    L_CURLY@[10; 11) "{"
    R_CURLY@[11; 12) "}"

