parser/src/parser/snapshots/test__parser::classes::test::parse_exported_class.snap
---
created: "2020-05-04T19:10:30.581489Z"
creator: insta@0.8.2
source: parser/src/parser/classes.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 19)
  CLASS_DEF@[0; 19)
    VISIBILITY@[0; 6)
      EXPORT_KW@[0; 6) "export"
    WHITESPACE@[6; 7) " "
    CLASS_KW@[7; 12) "class"
    WHITESPACE@[12; 13) " "
    NAME@[13; 16)
      IDENT@[13; 16) "Foo"
    WHITESPACE@[16; 17) " "
    L_CURLY@[17; 18) "{"
    R_CURLY@[18; 19) "}"

