parser/src/parser/snapshots/test__parser::enums::test::parse_enum_variants_types.snap
---
created: "2020-02-03T16:29:14.699030Z"
creator: insta@0.8.2
source: parser/src/parser/enums.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 41)
  ENUM_DEF@[0; 41)
    ENUM_KW@[0; 4) "enum"
    NAME@[4; 8)
      WHITESPACE@[4; 5) " "
      IDENT@[5; 8) "Foo"
    WHITESPACE@[8; 9) " "
    ENUM_VARIANT_LIST@[9; 41)
      L_CURLY@[9; 10) "{"
      ENUM_VARIANT@[10; 19)
        WHITESPACE@[10; 11) " "
        NAME@[11; 12)
          IDENT@[11; 12) "A"
        L_PAREN@[12; 13) "("
        ARRAY_TYPE@[13; 18)
          L_BRACK@[13; 14) "["
          IDENT_TYPE@[14; 17)
            IDENT@[14; 17) "i32"
          R_BRACK@[17; 18) "]"
        R_PAREN@[18; 19) ")"
      COMMA@[19; 20) ","
      ENUM_VARIANT@[20; 26)
        NAME@[20; 21)
          IDENT@[20; 21) "B"
        L_PAREN@[21; 22) "("
        IDENT_TYPE@[22; 25)
          IDENT@[22; 25) "i32"
        R_PAREN@[25; 26) ")"
      COMMA@[26; 27) ","
      ENUM_VARIANT@[27; 39)
        NAME@[27; 28)
          IDENT@[27; 28) "C"
        L_PAREN@[28; 29) "("
        PAREN_TYPE@[29; 38)
          L_PAREN@[29; 30) "("
          IDENT_TYPE@[30; 33)
            IDENT@[30; 33) "i32"
          COMMA@[33; 34) ","
          IDENT_TYPE@[34; 37)
            IDENT@[34; 37) "i32"
          R_PAREN@[37; 38) ")"
        R_PAREN@[38; 39) ")"
      COMMA@[39; 40) ","
      R_CURLY@[40; 41) "}"

